# ShaderJoy

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Basic.glsl  Basic.shader  main.cpp  shaderhandler.cpp  shaderhandler.hpp
